--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
           <div class="skill-row">
             <img class="web-img" src="images\web-development.png" alt="Web-devlopment-icon">
             <h3 >Design & Development</h3>
-            <p >I started to code when i was in School beacuse i like to design and create new things.Over time i have gained a wealth of experience designing and developing websites.</p>
+            <p >I started to code when i was in School beacuse i like to design and create new things.Over the time i have gained a wealth of experience designing and developing websites.</p>
           </div>
           <div class="skill-row">
             <img class="prog-img" src="images/c-.png" alt="Programming-icon">
             <h3>Programming in C++</h3>
-            <p >I like to compete in programming contest.I can solve Programming problems in c++ language.Over time i have learned to apply logic in programs.</p>
+            <p >I like to compete in programming contest.I can solve Programming problems in c++ language.In the course of time I have learned to apply logic in programs.</p>
 
           </div>
         </div>
